discussion/kv_engine/176433/176433_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Make RangeScan duration and buffering dynamic

Add "set" paths for changing the runtime value of:

* range_scan_read_buffer_send_size

This value is read from the config when a new scan is created, existing
scans do not pick-up the change.

* range_scan_max_lifetime

This value is push through by a change-listener to the range scan code.
New values take affect when the timeout task is scheduled.

These are deliberately not documented in cbepctl

Change-Id: I578ba6dd35fe6859667468473a53159445d9e167

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-22 17:03:55.000000000
Message: 
Uploaded patch set 8: Patch Set 7 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-22 17:36:22.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19648/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18: error: member access into incomplete type "const StatCollector" [clang-diagnostic-error]
        collector.addStat(std::string_view(key.data(), key.size()), statValue);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:19:7: note: forward declaration of "StatCollector"
class StatCollector;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19648/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18:
error: member access into incomplete type "const StatCollector" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19648/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48562/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
..\kv_engine\engines\ep\tests\ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
(36 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48562/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40814/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18:
error: member access into incomplete type "const StatCollector"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40814/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9440/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-22T17:17:27.594Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-22T17:17:27.594Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-22T17:17:27.594Z] (16 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9440/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22669/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-22T17:20:52.599Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-22T17:20:52.599Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-22T17:20:52.599Z] (906 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22669/ )

ThreadSanitizer issue: signal-unsafe call inside of a signal (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x33081) in __interceptor_malloc  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22669/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21591/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-22T17:17:55.894Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-22T17:17:55.894Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-22T17:17:55.894Z] (31 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21591/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21945/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-22T17:11:14.808Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-22T17:11:14.808Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-22T17:11:14.808Z] (27 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21945/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29971/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-22T17:22:23.323Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-22T17:22:23.323Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-22T17:22:23.323Z] (200 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29971/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20868/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-22T17:18:54.176Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-22T17:18:54.177Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-22T17:18:54.177Z] (105 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20868/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18864/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9341/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
